--- a/Init/docker-compose.yml
+++ b/Init/docker-compose.yml
@@ -2,12 +2,24 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:15.2-alpine
+    image: postgres
     container_name: postgres
-    ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_USER=test
-      - POSTGRES_PASSWORD=pass.123
-    volumes:
-      - ./db/init.sql:/var/lib/postgresql/init/init.sql
+    restart: always
+    environment: 
+        - DATABASE_HOST=127.0.0.1
+        - POSTGRES_USER=root
+        - POSTGRES_PASSWORD=root
+        - POSTGRES_DB=root  
+    ports: 
+        - "5432:5432"
+    volumes: 
+        - ./db/postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
+  pgadmin-compose:
+    image: dpage/pgadmin4
+    environment: 
+        PGADMIN_DEFAULT_EMAIL: "test@gmail.com"
+        PGADMIN_DEFAULT_PASSWORD: "test123!"
+    ports: 
+        - "16543:80"
+    depends_on: 
+        - postgres    
